# circuit-plus-plus

./: LICENSE  README.md  build_and_run.sh  build_and_test.sh  meson.build
demos/: demo.cpp  main.cpp  work.cpp
include/: global.hpp
include/comps/: acpower.hpp  ammeter.hpp  capacitor.hpp  component.hpp  dcpower.hpp  resistor.hpp  voltmeter.hpp
include/dto/: component_build_dto.hpp  component_update_dto.hpp
include/parts/: node.hpp  terminal.hpp
include/simulation/: circuit.hpp  mna_equation.hpp  simulation.hpp  simulation_builder.hpp
include/util/: units.hpp
src/: main.cpp
src/comps/: acpower.cpp  ammeter.cpp  capacitor.cpp  component.cpp  dcpower.cpp  resistor.cpp  voltmeter.cpp
src/parts/: node.cpp  terminal.cpp
src/simulation/: circuit.cpp  mna_equation.cpp  simulation.cpp  simulation_builder.cpp
tests/: acpower_tests.cpp  capacitor_tests.cpp  resistor_tests.cpp  test_main.cpp  tests.cpp
